tests/requests/snapshots/can_auth_with_magic_link@auth_request.snap
---
source: tests/requests/auth.rs
expression: magic_link_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"user1\",\"is_verified\":false,\"is_staff\":false,\"is_superuser\":false}"
