tests/requests/snapshots/can_create_book@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"{\"id\":1,\"title\":\"我的播客系列\",\"description\":\"这是一个测试播客\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":true,\"user_id\":1,\"created_at\":\"2025-10-10T18:52:41Z\",\"updated_at\":\"2025-10-10T18:52:41Z\",\"media_count\":0,\"chapter_count\":0}"
