tests/requests/snapshots/can_create_child_chapter_directly@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: child_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-09T07:42:27Z"),
    "description": String("Direct child description"),
    "id": Number(2),
    "level": Number(1),
    "media_count": Number(0),
    "parent_id": Number(1),
    "path": String("1/2"),
    "sort_order": Number(1),
    "title": String("Direct Child Chapter"),
    "updated_at": String("2025-10-09T07:42:27.067525Z"),
}
