tests/requests/snapshots/can_get_book_by_id@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"{\"id\":1,\"title\":\"Test Book\",\"description\":\"Test Description\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-09T09:56:00Z\",\"updated_at\":\"2025-10-09T09:56:00Z\"}"
