tests/requests/snapshots/can_get_book_tree@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"{\"book\":{\"id\":1,\"title\":\"Root Book\",\"description\":\"Root Level\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-08T08:54:19Z\",\"updated_at\":\"2025-10-08T08:54:19Z\"},\"children\":[{\"book\":{\"id\":2,\"title\":\"Child Book\",\"description\":\"Child Level\",\"cover_image\":null,\"parent_id\":1,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-08T08:54:19Z\",\"updated_at\":\"2025-10-08T08:54:19Z\"},\"children\":[]}]}"
