tests/requests/snapshots/can_get_books@books_request.snap
---
source: tests/requests/books.rs
expression: response.text()
---
"[{\"id\":1,\"title\":\"Book 1\",\"description\":\"Description 1\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-10T16:59:53Z\",\"updated_at\":\"2025-10-10T16:59:53Z\",\"media_count\":0,\"chapter_count\":0},{\"id\":2,\"title\":\"Book 2\",\"description\":\"Description 2\",\"cover_image\":null,\"parent_id\":null,\"sort_order\":null,\"is_public\":null,\"user_id\":1,\"created_at\":\"2025-10-10T16:59:53Z\",\"updated_at\":\"2025-10-10T16:59:53Z\",\"media_count\":0,\"chapter_count\":0}]"
