tests/requests/snapshots/can_get_chapter_by_id@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: response_chapter
---
Object {
    "book_id": Number(1),
    "created_at": String("2025-10-10T16:59:56Z"),
    "description": String("Test Description"),
    "id": Number(1),
    "level": Number(0),
    "media_count": Number(0),
    "parent_id": Null,
    "path": String("1"),
    "sort_order": Number(1),
    "title": String("Test Chapter"),
    "updated_at": String("2025-10-10T16:59:56.005710Z"),
}
