tests/requests/snapshots/can_get_chapter_children@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: children
---
[
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-10T16:59:57Z"),
        "description": Null,
        "id": Number(2),
        "level": Number(1),
        "media_count": Number(0),
        "parent_id": Number(1),
        "path": String("1/2"),
        "sort_order": Number(1),
        "title": String("Child Chapter 1"),
        "updated_at": String("2025-10-10T16:59:57.071148Z"),
    },
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-10T16:59:57Z"),
        "description": Null,
        "id": Number(3),
        "level": Number(1),
        "media_count": Number(0),
        "parent_id": Number(1),
        "path": String("1/3"),
        "sort_order": Number(2),
        "title": String("Child Chapter 2"),
        "updated_at": String("2025-10-10T16:59:57.074941Z"),
    },
    Object {
        "book_id": Number(1),
        "created_at": String("2025-10-10T16:59:57Z"),
        "description": Null,
        "id": Number(4),
        "level": Number(1),
        "media_count": Number(0),
        "parent_id": Number(1),
        "path": String("1/4"),
        "sort_order": Number(3),
        "title": String("Child Chapter 3"),
        "updated_at": String("2025-10-10T16:59:57.078776Z"),
    },
]
