tests/requests/snapshots/can_get_chapter_tree@chapters_request.snap
---
source: tests/requests/chapters.rs
expression: tree
---
Array [
    Object {
        "book_id": Number(1),
        "children": Array [
            Object {
                "book_id": Number(1),
                "children": Array [],
                "created_at": String("2025-10-08T15:50:28Z"),
                "description": Null,
                "id": Number(3),
                "level": Number(1),
                "media_count": Number(0),
                "parent_id": Number(1),
                "path": String("1/3"),
                "sort_order": Number(1),
                "title": String("Child 1.1"),
                "updated_at": String("2025-10-08T15:50:28.859571Z"),
            },
        ],
        "created_at": String("2025-10-08T15:50:28Z"),
        "description": Null,
        "id": Number(1),
        "level": Number(0),
        "media_count": Number(0),
        "parent_id": Null,
        "path": String("1"),
        "sort_order": Number(1),
        "title": String("Parent 1"),
        "updated_at": String("2025-10-08T15:50:28.849409Z"),
    },
    Object {
        "book_id": Number(1),
        "children": Array [],
        "created_at": String("2025-10-08T15:50:28Z"),
        "description": Null,
        "id": Number(2),
        "level": Number(0),
        "media_count": Number(0),
        "parent_id": Null,
        "path": String("2"),
        "sort_order": Number(2),
        "title": String("Parent 2"),
        "updated_at": String("2025-10-08T15:50:28.853854Z"),
    },
]
